# GPUForge

./: .gitignore  README.en.md  README.md  agents.md  gpuforge.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/gpuforge/: main.py  model_loader.py
src/gpuforge/backend/: amd_backend.py  gpu_base.py  monitor.py  nvidia_backend.py
src/gpuforge/locale/: gpuforge.pot
src/gpuforge/locale/pl/LC_MESSAGES/: gpuforge.mo  gpuforge.po
src/gpuforge/models/: toilet.3ds
src/gpuforge/resources/: style.qss
src/gpuforge/ui/: curve_editor.py  game_detector.py  gl_stress.py  main_window.py  monitor_widget.py  presets.py  stress_test.py
