[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gpuforge"
version = "1.1.1"
description = "Cross-platform GPU undervolt and overclocking tool"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
dependencies = [
    "PySide6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "nvidia-ml-py>=12.0.0",
    "psutil>=5.9.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
gpuforge = "gpuforge.main:main"

[tool.setuptools.packages.find]
where = ["src"]
